--- a/electro-client/package.json
+++ b/electro-client/package.json
@@ -2,6 +2,9 @@
   "name": "electro-client",
   "version": "0.1.0",
   "homepage": "/",
+  "engines": {
+    "node": "16.20.0"
+  },
   "private": true,
   "dependencies": {
     "@mantine/core": "^4.2.12",
