--- a/electro-client/package.json
+++ b/electro-client/package.json
@@ -45,7 +45,7 @@
     "zustand": "^4.0.0-rc.1"
   },
   "scripts": {
-    "vo": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
